index.html(code matrix)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     if (selected === 'cyber') {
       window.location.href = 'https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing';
     } else if (selected === 'code') {
-      window.location.href = 'https://sites.google.com/view/codematrixcompany/ev';
+      window.location.href = 'https://sites.google.com/view/codematrix Azerbaijan company/ev';
     } else {
       alert('Zəhmət olmasa bir sayt seç!');
     }
