--- a/index.html
+++ b/index.html
@@ -81,3 +81,17 @@
 
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="az">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>CodeMatrix Saytı</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="background-text">CodeMatrix-azerbaijan Company
+  BIZI SEÇDİYİNİZ ÜÇÜN TƏŞƏKKÜRLƏR</div>
+ <!-- Saytınızın digər məzmunu buraya gələcək -->
+</body>
+</html>
