--- a/index.html
+++ b/index.html
@@ -90,8 +90,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <div class="background-text">CodeMatrix-azerbaijan Company
-  BIZI SEÇDİYİNİZ ÜÇÜN TƏŞƏKKÜRLƏR</div>
- <!-- Saytınızın digər məzmunu buraya gələcək -->
+  <div class="background-text">CodeMatrix-azerbaijan Company</div>
+ <!-"CodeMatrix: Kiber təhlükəsizlik və etik hackerlik üzrə təlimlər və alətlər."-->
 </body>
 </html>
