--- a/index.html
+++ b/index.html
@@ -2,97 +2,86 @@
 <html lang="az">
 <head>
   <meta charset="UTF-8">
-  <title>Sayta giriş</title>
+  <title>Sayta Giriş</title>
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f0f4f8;
       color: #333;
       text-align: center;
-      padding-top: 100px;
+      padding-top: 50px;
     }
-    h1 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
-    .info {
-      font-size: 18px;
-      margin-top: 30px;
+    label, select, input, button {
+      display: block;
+      margin: 10px auto;
+      font-size: 16px;
     }
     .codematrix-banner {
       font-size: 32px;
       font-weight: bold;
-      margin-top: 40px;
+      margin-top: 30px;
       color: #2c3e50;
     }
   </style>
+</head>
+<body>
+
+  <h1>Sayta Giriş</h1>
+
+  <label for="lang">Dil seçin:</label>
+  <select id="lang">
+    <option value="az">Azərbaycan dili</option>
+    <option value="en">English</option>
+    <option value="tr">Türkçe</option>
+    <option value="ru">Русский</option>
+    <option value="de">Deutsch</option>
+    <option value="fr">Français</option>
+    <option value="es">Español</option>
+    <option value="it">Italiano</option>
+    <option value="zh">中文</option>
+    <option value="ja">日本語</option>
+  </select>
+
+  <input type="text" id="ad" placeholder="Adınız" />
+  <input type="text" id="soyad" placeholder="Soyadınız" />
+  <input type="number" id="yas" placeholder="Yaşınız" />
+  <input type="text" id="secim" placeholder="codematrix / cybermatrix" />
+
+  <button onclick="basla()">Sayta keç</button>
+
+  <div id="banner" class="codematrix-banner" style="display:none;"></div>
+
   <script>
-    function start() {
-      const languages = {
-        az: {
-          name: "Azərbaycan dili",
-          prompts: {
-            ad: "Zəhmət olmasa adınızı daxil edin:",
-            soyad: "Zəhmət olmasa soyadınızı daxil edin:",
-            yas: "Zəhmət olmasa yaşınızı daxil edin:",
-            yer: "Zəhmət olmasa yaşadığınız yeri daxil edin:",
-            secim: "Hansı sayta keçmək istəyirsiniz? (codematrix / cybermatrix)",
-            xos: (ad, soyad, yas, yer) =>
-              `Xoş gəlmisiniz, ${ad} ${soyad}!\nYaş: ${yas}\nYaşadığınız yer: ${yer}\nİndi yönləndirilirsiniz...`,
-            yanlis: "Yanlış seçim etdiniz. Sayt bağlanır.",
-          },
-          banner: "Bura CodeMatrix dünyasıdır"
-        },
-        en: { name: "English", prompts: {/* ... */}, banner: "This is CodeMatrix world" },
-        tr: { name: "Türkçe", prompts: {/* ... */}, banner: "Burası CodeMatrix dünyasıdır" },
-        ru: { name: "Русский", prompts: {/* ... */}, banner: "Это мир CodeMatrix" },
-        de: { name: "Deutsch", prompts: {/* ... */}, banner: "Das ist die CodeMatrix-Welt" },
-        fr: { name: "Français", prompts: {/* ... */}, banner: "C'est le monde de CodeMatrix" },
-        es: { name: "Español", prompts: {/* ... */}, banner: "Este es el mundo de CodeMatrix" },
-        it: { name: "Italiano", prompts: {/* ... */}, banner: "Questo è il mondo di CodeMatrix" },
-        zh: { name: "中文", prompts: {/* ... */}, banner: "这是 CodeMatrix 的世界" },
-        ja: { name: "日本語", prompts: {/* ... */}, banner: "これは CodeMatrix の世界です" }
-      };
+    const dillər = {
+      az: { xos: "Xoş gəlmisiniz", banner: "Bura CodeMatrix dünyasıdır", yanlis: "Yanlış seçim etdiniz." },
+      en: { xos: "Welcome", banner: "This is the world of CodeMatrix", yanlis: "Invalid selection." },
+      tr: { xos: "Hoş geldiniz", banner: "Burası CodeMatrix dünyasıdır", yanlis: "Yanlış seçim." },
+      ru: { xos: "Добро пожаловать", banner: "Это мир CodeMatrix", yanlis: "Неверный выбор." },
+      de: { xos: "Willkommen", banner: "Das ist die CodeMatrix-Welt", yanlis: "Falsche Auswahl." },
+      fr: { xos: "Bienvenue", banner: "C'est le monde de CodeMatrix", yanlis: "Choix invalide." },
+      es: { xos: "Bienvenido", banner: "Este es el mundo de CodeMatrix", yanlis: "Selección inválida." },
+      it: { xos: "Benvenuto", banner: "Questo è il mondo di CodeMatrix", yanlis: "Scelta non valida." },
+      zh: { xos: "欢迎", banner: "这是 CodeMatrix 的世界", yanlis: "无效的选择。" },
+      ja: { xos: "ようこそ", banner: "これは CodeMatrix の世界です", yanlis: "無効な選択です。" }
+    };
 
-      let dilKod = prompt("Dil seçin: az / en / tr / ru / de / fr / es / it / zh / ja");
-      if (!languages[dilKod]) {
-        alert("Naməlum dil seçildi. Azərbaycan dili ilə davam edilir.");
-        dilKod = "az";
-      }
-
-      const p = languages[dilKod].prompts;
-
-      const ad = prompt(p.ad);
-      const soyad = prompt(p.soyad);
-      const yas = prompt(p.yas);
-      const yer = prompt(p.yer);
-      const secim = prompt(p.secim);
+    function basla() {
+      const lang = document.getElementById("lang").value;
+      const ad = document.getElementById("ad").value;
+      const soyad = document.getElementById("soyad").value;
+      const yas = document.getElementById("yas").value;
+      const secim = document.getElementById("secim").value.toLowerCase();
 
       let link = "";
-      if (secim.toLowerCase() === "codematrix") {
+      if (secim === "codematrix") {
         link = "https://sites.google.com/view/codematrixcompany/ev";
-      } else if (secim.toLowerCase() === "cybermatrix") {
+      } else if (secim === "cybermatrix") {
         link = "https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing";
       } else {
-        alert(p.yanlis);
+        alert(dillər[lang].yanlis);
         return;
       }
 
-      alert(p.xos(ad, soyad, yas, yer));
-      document.getElementById("banner").innerText = languages[dilKod].banner;
-      document.getElementById("banner").style.display = "block";
-
-      setTimeout(() => {
-        window.location.href = link;
-      }, 3000);
-    }
-  </script>
-</head>
-<body onload="start()">
-  <h1>Sayta giriş hazırlanır...</h1>
-  <div class="info">
-    Zəhmət olmasa bütün məlumatları düzgün daxil edin.
-  </div>
-  <div id="banner" class="codematrix-banner" style="display: none;"></div>
-</body>
-</html>
+      alert(`${dillər[lang].xos}, ${ad} ${soyad}!\nYaş: ${yas}\nYönləndirilirsiniz...`);
+      document.getElementById("banner").innerText = dillər[lang].banner;
+      document.getElementById("banner").style.display
