--- a/index.html
+++ b/index.html
@@ -2,17 +2,17 @@
 <html lang="az">
 <head>
   <meta charset="UTF-8">
-  <title>Dil Seçimi və Suallar</title>
+  <title>Dil Seçimi və Giriş</title>
   <style>
     body {
-      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-family: "Segoe UI", Tahoma, sans-serif;
+      background-color: #f2f4f7;
       margin: 0;
       padding: 0;
-      background-color: #f2f4f7;
-      display: flex;
-      align-items: center;
-      justify-content: center;
       height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
 
     .hidden {
@@ -77,13 +77,7 @@
     <option value="az">Azərbaycan dili</option>
     <option value="en">English</option>
     <option value="tr">Türkçe</option>
-    <option value="ru">Русский</option>
-    <option value="de">Deutsch</option>
-    <option value="fr">Français</option>
-    <option value="es">Español</option>
-    <option value="zh">中文</option>
-    <option value="ja">日本語</option>
-    <option value="ar">العربية</option>
+    <!-- istəsən digər dilləri də saxla -->
   </select>
 </div>
 
@@ -92,12 +86,6 @@
 
   <label id="nameLabel"></label>
   <input type="text" id="name" required>
-
-  <label id="surnameLabel"></label>
-  <input type="text" id="surname" required>
-
-  <label id="locationLabel"></label>
-  <input type="text" id="location" required>
 
   <label id="siteLabel"></label>
   <select id="siteSelect">
@@ -111,74 +99,19 @@
 <script>
   const translations = {
     az: {
-      title: "Zəhmət olmasa məlumatlarınızı doldurun",
+      title: "Zəhmət olmasa adınızı və saytı seçin",
       name: "Adınız",
-      surname: "Soyadınız",
-      location: "Yaşadığınız yer",
       site: "Keçmək istədiyiniz sayt"
     },
     en: {
-      title: "Please fill in your information",
+      title: "Please enter your name and select a site",
       name: "Your name",
-      surname: "Your surname",
-      location: "Where do you live",
       site: "Which site do you want to visit"
     },
     tr: {
-      title: "Lütfen bilgilerinizi doldurun",
+      title: "Adınızı girin ve bir site seçin",
       name: "Adınız",
-      surname: "Soyadınız",
-      location: "Yaşadığınız yer",
       site: "Geçmek istediğiniz site"
-    },
-    ru: {
-      title: "Пожалуйста, заполните информацию",
-      name: "Ваше имя",
-      surname: "Ваша фамилия",
-      location: "Место проживания",
-      site: "Сайт для перехода"
-    },
-    de: {
-      title: "Bitte füllen Sie Ihre Informationen aus",
-      name: "Ihr Name",
-      surname: "Ihr Nachname",
-      location: "Ihr Wohnort",
-      site: "Zu welcher Seite möchten Sie gehen?"
-    },
-    fr: {
-      title: "Veuillez remplir vos informations",
-      name: "Votre nom",
-      surname: "Votre prénom",
-      location: "Votre lieu de résidence",
-      site: "Quel site souhaitez-vous visiter?"
-    },
-    es: {
-      title: "Por favor complete su información",
-      name: "Su nombre",
-      surname: "Su apellido",
-      location: "Lugar de residencia",
-      site: "¿Qué sitio desea visitar?"
-    },
-    zh: {
-      title: "请填写您的信息",
-      name: "您的名字",
-      surname: "您的姓氏",
-      location: "您住在哪里",
-      site: "您想访问哪个网站？"
-    },
-    ja: {
-      title: "情報を入力してください",
-      name: "お名前",
-      surname: "名字",
-      location: "お住まいの地域",
-      site: "アクセスしたいサイト"
-    },
-    ar: {
-      title: "يرجى ملء معلوماتك",
-      name: "الاسم",
-      surname: "اسم العائلة",
-      location: "مكان الإقامة",
-      site: "الموقع الذي ترغب بزيارته"
     }
   };
 
@@ -189,8 +122,6 @@
     const t = translations[lang];
     document.getElementById("formTitle").innerText = t.title;
     document.getElementById("nameLabel").innerText = t.name;
-    document.getElementById("surnameLabel").innerText = t.surname;
-    document.getElementById("locationLabel").innerText = t.location;
     document.getElementById("siteLabel").innerText = t.site;
 
     document.getElementById("languagePopup").classList.add("hidden");
@@ -199,11 +130,9 @@
 
   function goToSite() {
     const name = document.getElementById("name").value.trim();
-    const surname = document.getElementById("surname").value.trim();
-    const location = document.getElementById("location").value.trim();
     const site = document.getElementById("siteSelect").value;
 
-    if (name && surname && location && site) {
+    if (name && site) {
       window.location.href = site;
     } else {
       alert("Zəhmət olmasa bütün sahələri doldurun.");
