--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="az">
 <head>
   <meta charset="UTF-8">
-  <title>Dil Seçimi və Giriş</title>
+  <title>Giriş Ekranı</title>
   <style>
     body {
       font-family: "Segoe UI", Tahoma, sans-serif;
-      background-color: #f2f4f7;
       margin: 0;
       padding: 0;
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
+      background: linear-gradient(to right, #1a2980, #26d0ce);
+      color: white;
     }
 
     .hidden {
@@ -20,18 +21,26 @@
     }
 
     #languagePopup, #formContainer {
-      background-color: #fff;
+      background-color: rgba(255, 255, 255, 0.95);
+      color: #1a1a1a;
       padding: 30px 40px;
-      border-radius: 12px;
-      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      border-radius: 14px;
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
       width: 100%;
       max-width: 500px;
       text-align: center;
+      opacity: 0;
+      transform: translateY(30px);
+      transition: opacity 0.6s ease, transform 0.6s ease;
+    }
+
+    .show {
+      opacity: 1;
+      transform: translateY(0);
     }
 
     h2, h3 {
       margin-bottom: 25px;
-      color: #1a1a1a;
     }
 
     select, input {
@@ -48,7 +57,6 @@
       display: block;
       text-align: left;
       font-weight: 600;
-      color: #333;
       margin-top: 10px;
     }
 
@@ -66,6 +74,13 @@
     button:hover {
       background-color: #002f5f;
     }
+
+    @media (max-width: 600px) {
+      #formContainer, #languagePopup {
+        width: 90%;
+        padding: 20px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -77,7 +92,6 @@
     <option value="az">Azərbaycan dili</option>
     <option value="en">English</option>
     <option value="tr">Türkçe</option>
-    <!-- istəsən digər dilləri də saxla -->
   </select>
 </div>
 
@@ -85,7 +99,7 @@
   <h3 id="formTitle"></h3>
 
   <label id="nameLabel"></label>
-  <input type="text" id="name" required>
+  <input type="text" id="name">
 
   <label id="siteLabel"></label>
   <select id="siteSelect">
@@ -124,8 +138,16 @@
     document.getElementById("nameLabel").innerText = t.name;
     document.getElementById("siteLabel").innerText = t.site;
 
+    // İstifadəçinin əvvəlki adı varsa göstər
+    const savedName = localStorage.getItem("username");
+    if (savedName) {
+      document.getElementById("name").value = savedName;
+    }
+
     document.getElementById("languagePopup").classList.add("hidden");
-    document.getElementById("formContainer").classList.remove("hidden");
+    const form = document.getElementById("formContainer");
+    form.classList.remove("hidden");
+    setTimeout(() => form.classList.add("show"), 10);
   }
 
   function goToSite() {
@@ -133,7 +155,11 @@
     const site = document.getElementById("siteSelect").value;
 
     if (name && site) {
-      window.location.href = site;
+      localStorage.setItem("username", name);
+      alert(`Xoş gəlmisiniz, ${name}! İndi seçdiyiniz sayta yönləndirilirsiniz...`);
+      setTimeout(() => {
+        window.location.href = site;
+      }, 1000);
     } else {
       alert("Zəhmət olmasa bütün sahələri doldurun.");
     }
