--- a/index.html
+++ b/index.html
@@ -4,106 +4,92 @@
   <meta charset="UTF-8">
   <title>Giriş Ekranı</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: "Segoe UI", Tahoma, sans-serif;
+      font-family: "Segoe UI", sans-serif;
       margin: 0;
       padding: 0;
-      height: 100vh;
+      background: linear-gradient(to right, #1a2980, #26d0ce);
       display: flex;
       justify-content: center;
       align-items: center;
-      background: linear-gradient(to right, #1a2980, #26d0ce);
-      color: white;
+      height: 100vh;
     }
 
-    .hidden {
-      display: none;
-    }
-
-    #languagePopup, #formContainer {
-      background-color: rgba(255, 255, 255, 0.95);
-      color: #1a1a1a;
-      padding: 30px 40px;
-      border-radius: 14px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
-      width: 100%;
-      max-width: 500px;
-      text-align: center;
+    .popup, .form {
+      background-color: white;
+      padding: 30px 25px;
+      border-radius: 12px;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      width: 90%;
+      max-width: 400px;
       opacity: 0;
       transform: translateY(30px);
-      transition: opacity 0.6s ease, transform 0.6s ease;
+      animation: fadeIn 0.8s ease-out forwards;
     }
 
-    .show {
-      opacity: 1;
-      transform: translateY(0);
+    @keyframes fadeIn {
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
     }
 
     h2, h3 {
-      margin-bottom: 25px;
+      text-align: center;
+      margin-bottom: 20px;
     }
 
-    select, input {
+    select, input, button {
       width: 100%;
       padding: 12px;
-      margin-top: 8px;
-      margin-bottom: 20px;
+      margin: 10px 0;
       border: 1px solid #ccc;
       border-radius: 6px;
-      font-size: 16px;
-    }
-
-    label {
-      display: block;
-      text-align: left;
-      font-weight: 600;
-      margin-top: 10px;
+      font-size: 15px;
     }
 
     button {
       background-color: #004080;
       color: white;
       border: none;
-      padding: 12px 24px;
-      border-radius: 6px;
-      font-size: 16px;
       cursor: pointer;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s ease;
     }
 
     button:hover {
       background-color: #002f5f;
     }
 
-    @media (max-width: 600px) {
-      #formContainer, #languagePopup {
-        width: 90%;
-        padding: 20px;
-      }
+    .hidden {
+      display: none;
     }
   </style>
 </head>
 <body>
 
-<div id="languagePopup">
-  <h2>Language / Dil seçin</h2>
+<div id="languagePopup" class="popup">
+  <h2>Dil seçin</h2>
   <select id="languageSelect" onchange="showForm()">
-    <option value="">-- Select Language / Dil seçin --</option>
+    <option value="">-- Dil seçin --</option>
     <option value="az">Azərbaycan dili</option>
     <option value="en">English</option>
     <option value="tr">Türkçe</option>
   </select>
 </div>
 
-<div id="formContainer" class="hidden">
+<div id="formContainer" class="form hidden">
   <h3 id="formTitle"></h3>
 
-  <label id="nameLabel"></label>
-  <input type="text" id="name">
+  <label id="nameLabel" for="nameInput"></label>
+  <input type="text" id="nameInput" placeholder="Adınızı yazın">
 
-  <label id="siteLabel"></label>
+  <label id="siteLabel" for="siteSelect"></label>
   <select id="siteSelect">
-    <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">Cybermatrix</option>
+    <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
     <option value="https://codematrix-ac.github.io/CodeMatrix/">CodeMatrix</option>
   </select>
 
@@ -118,14 +104,14 @@
       site: "Keçmək istədiyiniz sayt"
     },
     en: {
-      title: "Please enter your name and select a site",
-      name: "Your name",
-      site: "Which site do you want to visit"
+      title: "Please enter your name and choose a site",
+      name: "Your Name",
+      site: "Select the site to visit"
     },
     tr: {
-      title: "Adınızı girin ve bir site seçin",
+      title: "Lütfen adınızı ve geçmek istediğiniz siteyi girin",
       name: "Adınız",
-      site: "Geçmek istediğiniz site"
+      site: "Gitmek istediğiniz site"
     }
   };
 
@@ -134,35 +120,31 @@
     if (!lang) return;
 
     const t = translations[lang];
+
     document.getElementById("formTitle").innerText = t.title;
     document.getElementById("nameLabel").innerText = t.name;
     document.getElementById("siteLabel").innerText = t.site;
 
-    // İstifadəçinin əvvəlki adı varsa göstər
-    const savedName = localStorage.getItem("username");
-    if (savedName) {
-      document.getElementById("name").value = savedName;
-    }
-
     document.getElementById("languagePopup").classList.add("hidden");
     const form = document.getElementById("formContainer");
     form.classList.remove("hidden");
-    setTimeout(() => form.classList.add("show"), 10);
+    form.classList.add("popup"); // animasiya
   }
 
   function goToSite() {
-    const name = document.getElementById("name").value.trim();
+    const name = document.getElementById("nameInput").value.trim();
     const site = document.getElementById("siteSelect").value;
 
-    if (name && site) {
-      localStorage.setItem("username", name);
-      alert(`Xoş gəlmisiniz, ${name}! İndi seçdiyiniz sayta yönləndirilirsiniz...`);
-      setTimeout(() => {
-        window.location.href = site;
-      }, 1000);
-    } else {
-      alert("Zəhmət olmasa bütün sahələri doldurun.");
+    if (!name || !site) {
+      alert("Zəhmət olmasa adınızı və saytı seçin.");
+      return;
     }
+
+    localStorage.setItem("username", name);
+    alert(`Xoş gəlmisiniz, ${name}! Sayta yönləndirilirsiniz...`);
+    setTimeout(() => {
+      window.location.href = site;
+    }, 1000);
   }
 </script>
 
