--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
     localStorage.setItem("username", name);
     alert(`Xoş gəlmisiniz, ${name}! Sayta yönləndirilirsiniz...`);
     setTimeout(() => {
-      window.location.href = site;
+      window.location.href = site; // Yönləndirmə kodu
     }, 1000);
   }
 </script>
