--- a/index.html
+++ b/index.html
@@ -1,149 +1,112 @@
 <!DOCTYPE html>
-<html lang="az">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Giriş Ekranı</title>
+  <title>Welcome</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
-
+    * { box-sizing: border-box; }
     body {
-      font-family: "Segoe UI", sans-serif;
       margin: 0;
       padding: 0;
+      font-family: "Segoe UI", sans-serif;
       background: linear-gradient(to right, #1a2980, #26d0ce);
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
     }
-
-    .popup, .form {
-      background-color: white;
-      padding: 30px 25px;
-      border-radius: 12px;
-      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+    .container {
+      text-align: center;
+      color: white;
+    }
+    #helloText {
+      font-size: 48px;
+      opacity: 0;
+      animation: fadeInText 2s ease forwards;
+    }
+    @keyframes fadeInText {
+      to {
+        opacity: 1;
+      }
+    }
+    #formContainer {
+      margin-top: 30px;
+      background: white;
+      color: black;
+      padding: 25px 20px;
+      border-radius: 10px;
       width: 90%;
       max-width: 400px;
-      opacity: 0;
-      transform: translateY(30px);
-      animation: fadeIn 0.8s ease-out forwards;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+      display: none;
+      animation: fadeInForm 1.5s ease forwards;
     }
-
-    @keyframes fadeIn {
+    @keyframes fadeInForm {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
-
-    h2, h3 {
-      text-align: center;
-      margin-bottom: 20px;
-    }
-
-    select, input, button {
+    input, select, button {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
       font-size: 15px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
     }
-
     button {
       background-color: #004080;
       color: white;
       border: none;
       cursor: pointer;
-      transition: background-color 0.3s ease;
     }
-
     button:hover {
-      background-color: #002f5f;
-    }
-
-    .hidden {
-      display: none;
+      background-color: #003060;
     }
   </style>
 </head>
 <body>
 
-<div id="languagePopup" class="popup">
-  <h2>Dil seçin</h2>
-  <select id="languageSelect" onchange="showForm()">
-    <option value="">-- Dil seçin --</option>
-    <option value="az">Azərbaycan dili</option>
-    <option value="en">English</option>
-    <option value="tr">Türkçe</option>
-  </select>
-</div>
+<div class="container">
+  <div id="helloText">Hello!</div>
 
-<div id="formContainer" class="form hidden">
-  <h3 id="formTitle"></h3>
+  <div id="formContainer">
+    <h3>Please enter your name and choose a site</h3>
 
-  <label id="nameLabel" for="nameInput"></label>
-  <input type="text" id="nameInput" placeholder="Adınızı yazın">
+    <input type="text" id="nameInput" placeholder="Your name">
 
-  <label id="siteLabel" for="siteSelect"></label>
-  <select id="siteSelect">
-    <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
-    <option value="https://codematrix-ac.github.io/CodeMatrix/">CodeMatrix</option>
-  </select>
+    <select id="siteSelect">
+      <option value="https://sites.google.com/view/cybermatrix-azerbaijan-company?usp=sharing">CyberMatrix</option>
+      <option value="https://sites.google.com/view/codematrixcompany/ev">CodeMatrix</option>
+    </select>
 
-  <button onclick="goToSite()">Davam et</button>
+    <button onclick="goToSite()">Continue</button>
+  </div>
 </div>
 
 <script>
-  const translations = {
-    az: {
-      title: "Zəhmət olmasa adınızı və saytı seçin",
-      name: "Adınız",
-      site: "Keçmək istədiyiniz sayt"
-    },
-    en: {
-      title: "Please enter your name and choose a site",
-      name: "Your Name",
-      site: "Select the site to visit"
-    },
-    tr: {
-      title: "Lütfen adınızı ve geçmek istediğiniz siteyi girin",
-      name: "Adınız",
-      site: "Gitmek istediğiniz site"
-    }
-  };
-
-  function showForm() {
-    const lang = document.getElementById("languageSelect").value;
-    if (!lang) return;
-
-    const t = translations[lang];
-
-    document.getElementById("formTitle").innerText = t.title;
-    document.getElementById("nameLabel").innerText = t.name;
-    document.getElementById("siteLabel").innerText = t.site;
-
-    document.getElementById("languagePopup").classList.add("hidden");
-    const form = document.getElementById("formContainer");
-    form.classList.remove("hidden");
-    form.classList.add("popup"); // animasiya
-  }
+  // Show form after "Hello!" animation
+  setTimeout(() => {
+    document.getElementById("formContainer").style.display = "block";
+  }, 2500);
 
   function goToSite() {
     const name = document.getElementById("nameInput").value.trim();
     const site = document.getElementById("siteSelect").value;
 
     if (!name || !site) {
-      alert("Zəhmət olmasa adınızı və saytı seçin.");
+      alert("Please enter your name and select a site.");
       return;
     }
 
-    localStorage.setItem("username", name);
-    alert(`Xoş gəlmisiniz, ${name}! Sayta yönləndirilirsiniz...`);
+    alert(`Welcome, ${name}! Redirecting...`);
     setTimeout(() => {
-      window.location.href = site; // Yönləndirmə kodu
+      window.location.href = site;
     }, 1000);
   }
 </script>
